style/row.less
.rdg-row {
  width: var(--row-width);
  height: var(--row-height);
  line-height: var(--row-height);
  @bg: #fff;
  background-color: @bg;

  &:hover {
    background-color: darken(@bg, 4%);
  }
}

.rdg-row-selected {
  @bg: #dbecfa;
  background-color: @bg;

  &:hover {
    background-color: darken(@bg, 4%);
  }
}

.rdg-row-expand-icon {
  cursor: pointer;

  &:hover {
    color: #777;
  }
}

.rdg-row-default-group {
  padding: 0 8px;
  border-bottom: 1px solid @borderColor;
}

.rdg-summary-row {
  position: -webkit-sticky;
  position: sticky;
  bottom: 0;
  border-top: 2px solid darken(@borderColor, 20%);
  z-index: 3;
}

